Updated my theme and hey, it looks pretty good!

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://PogiNate.github.com
 title: Nate Dickson 
 subtitle: What I think.
-author: Your Name
+author: Nate Dickson
 simple_search: http://google.com/search
 description: A blog about typical nerd stuff.
 
