--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 github_user: PogiNate
 github_repo_count: 3
 github_show_profile_link: true
-github_skip_forks: true
+github_skip_forks: false
 
 # Twitter
 twitter_user: poginate
