Add new post and images.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://PogiNate.github.com
+url: http://natedickson.com
 title: Nate Dickson 
 subtitle: What I think.
 author: Nate Dickson
