Modify the config to point to new home.
I may give this an even newer home at some point.

But probably not.

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://natedickson.com
-title: Nate Dickson 
-subtitle: What I think.
+url: http://poginate.github.io
+title: Nate Dickson
+subtitle: Endlessly Curious
 author: Nate Dickson
 simple_search: http://google.com/search
 description: A blog about typical nerd stuff.
